feature/refactor: add loginController, add swagger endpoint, init jwt, create user migrate, create user seed, create user repository, refactor function in digimon, pokemon, controller e etc...
