# src/swagger.json
@@ -1,216 +1,266 @@
 {
-   "openapi":"3.0.0",
-   "info":{
-     "title":"Pokemon and Digimons Api",
-     "description":"This api as container pokemons and digimons infors",
-     "terms":"We dont have terms in moment",
-     "contact":"example@email",
-     "version":"1.0.0"
-   },
-   "servers":[
-       {
-           "url":"http://localhost:3333/v1",
-           "description":"url no test"
-       }
-   ],
-   "paths":{
-       "/pokemons":{
-           "get":{
-               "summary":"Get list pokemons",
-               "description":"This route is response list pokemons",
-               "tags":["Pokemons"],
-               "security":[{"bewarerAuth":[]}],
-               "produces": [
-                "application/xml",
-                "application/json"
-              ],          
-               "responses":{
-                   "200":{
-                       "description":"This is a list pokemon",
-                       "content":{ 
-                           "application/json":{
-                                "schema":{
-                                    "type":"object",                                
-                                    "$ref":"#/components/schemas/Pokemons"
-                                                              
-                                }
+    "openapi": "3.0.0",
+    "info": {
+        "title": "Pokemon and Digimons Api",
+        "description": "This api as container pokemons and digimons infors",
+        "terms": "We dont have terms in moment",
+        "contact": "example@email",
+        "version": "1.0.0"
+    },
+    "servers": [
+        {
+            "url": "http://localhost:3333/v1",
+            "description": "url no test"
+        }
+    ],
+    "paths": {
+        "/login": {
+            "post": {
+                "summary": "Login in systm",
+                "description": "This route is response login in system",
+                "tags": ["Authentication"],
+                "security": [{ "bewarerAuth": [] }],
+                "produces": ["application/xml", "application/json"],
+                "operationId": "loginUser",
+                "requestBody": {
+                    "description": "This route is response login in system",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LoginRequest"
+                            }
+                        },
+                        "application/xml": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LoginRequest"
                             }
                         }
-                   },
-                   "404":{
-                       "description":"Pokemon not found"
-                   }
-               }
-           }
-       },
-       "/pokemon/{pokemon}":{
-            "get":{
-                "summary":"Get a specific pokemons",
-                "description":"This endpoint is response to return specific search the pokemon name",
-                "tags":["Pokemons"],
-                "security":[{"bewarerAuth":[]}],
-                "produces": [
-                "application/xml",
-                "application/json"
-            ],    
-            "parameters": [
-                {
-                "name": "pokemon",
-                "in": "path",
-                "description": "Search a pokemon to name",
-                "required": true,
-                "type": "string"
-                }             
-            ],      
-                "responses":{
-                    "200":{
-                        "description":"This is a pokemon",
-                        "content":{ 
-                            "application/json":{
-                                "schema":{
-                                    "type":"object",                                
-                                    "$ref":"#/components/schemas/Pokemons"
-                                                            
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "This is login a user in system",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/User"
                                 }
                             }
                         }
                     },
-                    "404":{
-                        "description":"Pokemon not found"
+                    "404": {
+                        "description": "User not found"
                     }
                 }
             }
         },
-        "/digimons":{
-            "get":{
-                "summary":"show list digimons",
-                "description":"This endpoint is response to return list digimons",
-                "tags":["Digimons"],
-                "security":[{"bewarerAuth":[]}],
-                "produces": [
-                    "application/xml",
-                    "application/json"
-                ],   
-      
-                "responses":{
-                    "200":{
-                        "description":"List of Digimons",
-                        "content":{ 
-                            "application/json":{
-                                "schema":{
-                                    "type":"object",                                
-                                    "$ref":"#/components/schemas/Digimons"
-                                                            
+        "/pokemons": {
+            "get": {
+                "summary": "Get list pokemons",
+                "description": "This route is response list pokemons",
+                "tags": ["Pokemons"],
+                "security": [{ "bewarerAuth": [] }],
+                "produces": ["application/xml", "application/json"],
+                "responses": {
+                    "200": {
+                        "description": "This is a list pokemon",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/Pokemons"
                                 }
                             }
                         }
                     },
-                    "404":{
-                        "description":"Digimon not found"
+                    "404": {
+                        "description": "Pokemon not found"
                     }
                 }
             }
         },
-        "/digimon/{digimon}":{
-            "get":{
-                "summary":"search digimon by name",
-                "description":"This endpoint is response to return a especific digimon",
-                "tags":["Digimons"],
-                "security":[{"bewarerAuth":[]}],
-                "produces": [
-                    "application/xml",
-                    "application/json"
-                ], 
+        "/pokemon/{pokemon}": {
+            "get": {
+                "summary": "Get a specific pokemons",
+                "description": "This endpoint is response to return specific search the pokemon name",
+                "tags": ["Pokemons"],
+                "security": [{ "bewarerAuth": [] }],
+                "produces": ["application/xml", "application/json"],
                 "parameters": [
                     {
-                    "name": "digimon",
-                    "in": "path",
-                    "description": "Search a Digimon to name",
-                    "required": true,
-                    "type": "string"
-                    }             
-                ],    
-                "responses":{
-                    "200":{
-                        "description":"Search a Digimon",
-                        "content":{ 
-                            "application/json":{
-                                "schema":{
-                                    "type":"object",                                
-                                    "$ref":"#/components/schemas/Digimons"
-                                                            
+                        "name": "pokemon",
+                        "in": "path",
+                        "description": "Search a pokemon to name",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "This is a pokemon",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/Pokemons"
                                 }
                             }
                         }
                     },
-                    "404":{
-                        "description":"Digimon not found"
+                    "404": {
+                        "description": "Pokemon not found"
+                    }
+                }
+            }
+        },
+        "/digimons": {
+            "get": {
+                "summary": "show list digimons",
+                "description": "This endpoint is response to return list digimons",
+                "tags": ["Digimons"],
+                "security": [{ "bewarerAuth": [] }],
+                "produces": ["application/xml", "application/json"],
+
+                "responses": {
+                    "200": {
+                        "description": "List of Digimons",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/Digimons"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Digimon not found"
+                    }
+                }
+            }
+        },
+        "/digimon/{digimon}": {
+            "get": {
+                "summary": "search digimon by name",
+                "description": "This endpoint is response to return a especific digimon",
+                "tags": ["Digimons"],
+                "security": [{ "bewarerAuth": [] }],
+                "produces": ["application/xml", "application/json"],
+                "parameters": [
+                    {
+                        "name": "digimon",
+                        "in": "path",
+                        "description": "Search a Digimon to name",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Search a Digimon",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/Digimons"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Digimon not found"
                     }
                 }
             }
         }
-  
-   },
+    },
 
-
-   
-   "components":{
-       "schemas":{
-           "Pokemons":{
-               "type":"object",
-               "properties":{
-                    "id":{
-                        "type":"number"
+    "components": {
+        "schemas": {
+            "LoginRequest": {
+                "type": "object",
+                "properties": {
+                    "email": {
+                        "type": "string"
                     },
-                   "name":{
-                       "type":"string"
-                   },
-                   "image":{
-                       "type":"string"
-                   },
-                   "description":{
-                       "type":"string"
-                   },
-                   "season":{
-                       "type":"string"
-                   },
-                   "type":{
-                       "type":"string"
-                   }                     
-               }
-           },
-           "Digimons":{
-            "type":"object",
-            "properties":{
-                 "id":{
-                     "type":"number"
-                 },
-                "name":{
-                    "type":"string"
-                },
-                "image":{
-                    "type":"string"
-                },
-                "description":{
-                    "type":"string"
-                },
-                "season":{
-                    "type":"string"
-                },
-                "type":{
-                    "type":"string"
-                }                     
+                    "password": {
+                        "type": "string"
+                    }
+                }
+            },
+            "User": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "number"
+                    },
+                    "email": {
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "jwt": {
+                        "type": "string"
+                    }
+                }
+            },
+            "Pokemons": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "number"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "image": {
+                        "type": "string"
+                    },
+                    "description": {
+                        "type": "string"
+                    },
+                    "season": {
+                        "type": "string"
+                    },
+                    "type": {
+                        "type": "string"
+                    }
+                }
+            },
+            "Digimons": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "number"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "image": {
+                        "type": "string"
+                    },
+                    "description": {
+                        "type": "string"
+                    },
+                    "season": {
+                        "type": "string"
+                    },
+                    "type": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
             }
         }
-           
-
-       },
-       "securitySchemes":{
-           "bearerAuth":{
-               "type":"http",
-               "scheme":"bearer",
-               "bearerFormat":"JWT"
-           }
-       }
-   }
+    }
 }
+
